--- a/packages/atomic/project.json
+++ b/packages/atomic/project.json
@@ -34,7 +34,7 @@
         "commands": [
           "node --max_old_space_size=6144 ../../node_modules/@stencil/core/bin/stencil build",
           "node ./scripts/stencil-proxy.mjs",
-          "tsc -p tsconfig.lit.json",
+          "node ./scripts/build.mjs --config=tsconfig.lit.json",
           "node process-css.mjs",
           "esbuild src/autoloader/index.ts --format=esm --outfile=dist/atomic/autoloader/index.esm.js",
           "esbuild src/autoloader/index.ts --format=cjs --outfile=dist/atomic/autoloader/index.cjs.js"
@@ -92,7 +92,7 @@
       }
     },
     "dev": {
-      "dependsOn": ["storybook", "build:watch", "cem:dev", "web:dev"],
+      "dependsOn": ["build:watch", "cem:dev", "web:dev"],
       "executor": "nx:noop"
     },
     "build:watch": {
