--- a/packages/atomic/package.json
+++ b/packages/atomic/package.json
@@ -39,6 +39,10 @@
       "types": "./dist/atomic/components/components/index.d.ts",
       "import": "./dist/atomic/components/components/index.js"
     },
+    "./components/commerce/*": {
+      "import": "./dist/atomic/components/components/commerce/*",
+      "require": "./dist/atomic/themes/*"
+    },
     "./custom-elements-manifest": "./custom-elements.json"
   },
   "files": [
