proper export field
https://coveord.atlassian.net/browse/KIT-3936

--- a/packages/atomic/package.json
+++ b/packages/atomic/package.json
@@ -40,8 +40,8 @@
       "import": "./dist/atomic/components/components/index.js"
     },
     "./components/commerce/*": {
-      "import": "./dist/atomic/components/components/commerce/*",
-      "require": "./dist/atomic/themes/*"
+      "types": "./dist/atomic/components/components/commerce/index.d.ts",
+      "import": "./dist/atomic/components/components/commerce/*"
     },
     "./custom-elements-manifest": "./custom-elements.json"
   },
